--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -1,37 +1,38 @@
 name: Create Kubernetes Cluster and Install Argo & Strimzi
+
 on:
- push:
-   branches:
-   - main
-   paths:
-   - terraform/**
+  push:
+    branches:
+      - main
+    paths:
+      - terraform/**
+
 jobs:
-   terraform:
+  terraform:
     name: "Terraform Infrastructure Change Management"
     runs-on: ubuntu-latest
     defaults:
       run:
         shell: bash
-        # We keep Terraform files in the terraform directory.
         working-directory: ./terraform
-  
+
     steps:
       - name: Checkout the repository to the runner
         uses: actions/checkout@v2
-  
+
       - name: Setup Terraform with specified version on the runner
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.11.3
-      
+
       - name: Terraform init
         id: init
         run: terraform init
-      
+
       - name: Terraform validate
         id: validate
         run: terraform validate
-  
+
       - name: Terraform plan
         id: plan
         if: github.event_name == 'pull_request'
@@ -39,8 +40,9 @@ jobs:
         continue-on-error: true
         env:
           GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
-      
-      - uses: actions/github-script@v6
+
+      - name: Comment Terraform plan on PR
+        uses: actions/github-script@v6
         if: github.event_name == 'pull_request'
         env:
           PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
@@ -50,27 +52,27 @@ jobs:
             #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
             #### Terraform Validation 🤖\`${{ steps.validate.outcome }}\`
             #### Terraform Plan 📖\`${{ steps.plan.outcome }}\`
-  
+
             <details><summary>Show Plan</summary>
-  
+
             \`\`\`\n
             ${process.env.PLAN}
             \`\`\`
-  
+
             </details>
             *Pushed by: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
-  
+
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
               body: output
             })
-  
+
       - name: Terraform Plan Status
         if: steps.plan.outcome == 'failure'
         run: exit 1
-  
+
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: terraform apply -auto-approve -input=false
