--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -1,12 +1,6 @@
 name: Create Kubernetes Cluster and Install Argo & Strimzi
 
 on:
-  pull_request:
-  push:
-    branches:
-      - main
-    paths:
-      - terraform/**
   workflow_dispatch:
     inputs:
       action:
@@ -23,22 +17,25 @@ on:
         default: 'main'
 
 jobs:
-  terraform:
-    name: "Terraform Infrastructure Change Management"
+  plan:
+    name: "Terraform Plan"
     runs-on: ubuntu-latest
     defaults:
       run:
         shell: bash
         working-directory: ./terraform
 
+    outputs:
+      tf_plan_artifact_name: terraform-plan-${{ github.run_id }}
+
     steps:
       - name: Checkout the repository to the runner
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
-          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.branch || github.ref }}
+          ref: ${{ github.event.inputs.branch }}
 
-      - name: Setup Terraform with specified version on the runner
-        uses: hashicorp/setup-terraform@v2
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.11.3
 
@@ -54,34 +51,84 @@ jobs:
 
       - name: Terraform plan
         id: plan
-        if: github.event_name == 'pull_request' || (github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'plan')
         run: terraform plan -no-color -input=false -out=tfplan
-        continue-on-error: true
+        continue-on-error: true # Continue to generate text plan even if plan has diffs/errors reported by exit code 2
         env:
           GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
 
-      - name: Terraform Plan Status Check
-        if: (github.event_name == 'pull_request' || (github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'plan')) && steps.plan.outcome == 'failure'
+      - name: Generate Terraform Plan Text Output
+        id: plan-text
+        # Run if plan succeeded OR if plan failed with exit code 2 (changes exist)
+        if: steps.plan.outcome == 'success' || steps.plan.outputs.exitcode == 2
+        run: terraform show -no-color tfplan > tfplan.txt
+        continue-on-error: true
+  
+      - name: Check Terraform Plan Status
+        if: steps.plan.outcome == 'failure' && steps.plan.outputs.exitcode != 2
         run: |
-          echo "Terraform plan failed!"
+          echo "Terraform plan failed severely (exit code ${{ steps.plan.outputs.exitcode }})!"
           exit 1
-      
-      - name: Upload Terraform Plan Artifact
-        if: steps.plan.outcome == 'success' && (github.event_name == 'pull_request' || (github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'plan'))
+
+      - name: Upload Terraform Plan Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: terraform-plan-${{ github.run_id }}
-          path: ./terraform/tfplan
-          retention-days: 7
+          name: ${{ steps.plan.outputs.tf_plan_artifact_name }}
+          path: |
+            ./terraform/tfplan
+            ./terraform/tfplan.txt
+          retention-days: 1 # Keep artifact for 1 day
+
+  apply:
+    name: "Terraform Apply"
+    runs-on: ubuntu-latest
+    needs: plan # Depends on the plan job finishing successfully
+    if: github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'apply'
+
+    # Define the environment which requires manual approval
+    environment:
+      name: live
+
+    defaults:
+      run:
+        shell: bash
+        working-directory: ./terraform # Ensure TF files are in a 'terraform' subdirectory
+
+    steps:
+      - name: Checkout the repository to the runner
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.inputs.branch }} # Checkout the same branch used for plan
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.11.3
+
+      - name: Download Terraform Plan Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: ${{ needs.plan.outputs.tf_plan_artifact_name }}
+          path: ./terraform/
+
+      - name: Terraform init
+        id: init
+        run: terraform init -input=false
+        env:
+          GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+
+      - name: Check if plan file exists
+        id: check_plan
+        run: |
+          if [ -f "tfplan" ]; then
+            echo "Plan file found."
+          else
+            echo "Error: Plan file 'tfplan' not found after download."
+            exit 1
+          fi
 
       - name: Terraform Apply
-        if: (github.ref == 'refs/heads/main' && github.event_name == 'push') || (github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'apply')
-        run: |
-          echo "Generating plan before applying..."
-          # Generate a plan and save it to tfplan
-          terraform plan -out=tfplan -input=false
-          echo "Applying generated plan..."
-          # Apply the plan file just created
-          terraform apply -input=false tfplan
+        id: apply
+        if: steps.check_plan.outcome == 'success'
+        run: terraform apply -input=false tfplan
         env:
           GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
