--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -72,7 +72,7 @@ jobs:
       - name: Upload Terraform Plan Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ steps.plan.outputs.tf_plan_artifact_name }}
+          name: terraform-plan-${{ github.run_id }} 
           path: |
             ./terraform/tfplan
             ./terraform/tfplan.txt
