--- a/manifests/argocd/config.yaml
+++ b/manifests/argocd/config.yaml
@@ -18,11 +18,30 @@ spec:
     server: https://kubernetes.default.svc
     namespace: default  
 
-  # Configure argocd to create the namespace specified in destination
-  syncPolicy:
-    # syncOptions:
-    # - CreateNamespace=true
-
     # Enable automatic sync - prevent direct changes to the cluster(selfHeal) and delete files in repo when deleted in cluster(prune)
+    automated:
+      selfHeal: true
+
+---
+
+# Kafka cluster App
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: kafka-cluster
+  namespace: kafka
+
+spec:
+  project: default
+  source:
+    repoURL: https://github.com/irori-ab/fs-ai-ops-gul-kai.git
+    targetRevision: HEAD
+    path: manifests/kafka-cluster
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: kafka  
+  syncPolicy:
+    syncOptions:
+    - CreateNamespace=true
     automated:
       selfHeal: true
