fix: add missing nodepool annotation

--- a/manifests/kafka-cluster/cluster-config.yaml
+++ b/manifests/kafka-cluster/cluster-config.yaml
@@ -5,6 +5,7 @@ metadata:
   name: kai-kafka-cluster
   namespace: kafka
   annotations:
+    strimzi.io/node-pools: enabled
     strimzi.io/kraft: enabled
 spec:
   kafka:
